# vinyl-record-library

./: README.md
backend/: .gitignore  database.py  insert_50_records.sql  main.py  models.py  pyproject.toml  schema.py  seed_data.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/add/: page.tsx
frontend/src/app/records/[id]/: page.tsx
frontend/src/components/: AddRecord.tsx  ClientRecords.tsx  EditRecord.tsx  ThemeToggle.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/types/: types.ts
